--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"github-markdown-css": "^5.5.1",
 		"next": "14.2.3",
 		"next-mdx-remote": "^4.4.1",
 		"react": "^18",
