--- a/package.json
+++ b/package.json
@@ -10,19 +10,25 @@
 	},
 	"dependencies": {
 		"github-markdown-css": "^5.5.1",
-		"next": "14.2.3",
+		"next": "^15.0.3",
 		"next-mdx-remote": "^4.4.1",
 		"react": "^18",
 		"react-dom": "^18",
-		"unicode-escapes": "^1.0.0"
+		"rehype-sanitize": "^6.0.0",
+		"rehype-stringify": "^10.0.1",
+		"remark-html": "^16.0.1",
+		"remark-parse": "^11.0.0",
+		"remark-rehype": "^11.1.1",
+		"unicode-escapes": "^1.0.0",
+		"unified": "^11.0.5"
 	},
 	"devDependencies": {
-		"@emiyaaaaa/biomeconfig": "^1.0.0",
+		"@biomejs/biome": "^1.9.4",
+		"@emiyaaaaa/biomeconfig": "^1.2.0",
 		"@emiyaaaaa/tsconfig": "^1.0.2",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
-		"biome": "^0.3.3",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
